@@ -20,6 +20,7 @@
 #include "StdAfx.h"
 #include "SVNConfig.h"
 #include "UnicodeUtils.h"
+#include "PathUtils.h"
 #include "SVNGlobal.h"
 #pragma warning(push)
 #include "svn_error.h"
@@ -32,6 +33,8 @@ SVNConfig* SVNConfig::m_pInstance;
 
 
 SVNConfig::SVNConfig(void)
+    : config(nullptr)
+    , patterns(nullptr)
 {
     svn_error_t * err;
     parentpool = svn_pool_create(NULL);
@@ -42,14 +45,9 @@ SVNConfig::SVNConfig(void)
     if (err == 0)
         err = svn_config_get_config (&(config), g_pConfigDir, parentpool);
 
-    patterns = NULL;
-
     if (err != 0)
     {
         svn_error_clear(err);
-        svn_pool_destroy (pool);
-        svn_pool_destroy (parentpool);
-        exit(-1);
     }
 }
 
@@ -62,6 +60,8 @@ SVNConfig::~SVNConfig(void)
 
 BOOL SVNConfig::GetDefaultIgnores()
 {
+    if (config == nullptr)
+        return FALSE;
     svn_error_t * err;
     patterns = NULL;
     err = svn_wc_get_default_ignores (&(patterns), config, pool);
@@ -83,10 +83,44 @@ BOOL SVNConfig::MatchIgnorePattern(const CString& name)
 
 BOOL SVNConfig::KeepLocks()
 {
+    if (config == nullptr)
+        return FALSE;
     svn_boolean_t no_unlock = FALSE;
     svn_config_t * opt = (svn_config_t *)apr_hash_get (config, SVN_CONFIG_CATEGORY_CONFIG,
         APR_HASH_KEY_STRING);
     if (opt)
         svn_error_clear(svn_config_get_bool(opt, &no_unlock, SVN_CONFIG_SECTION_MISCELLANY, SVN_CONFIG_OPTION_NO_UNLOCK, FALSE));
     return no_unlock;
+}
+
+bool SVNConfig::SetUpSSH(svn_client_ctx_t * ctx)
+{
+    bool bRet = false;
+    //set up the SVN_SSH param
+    CString tsvn_ssh = CRegString(_T("Software\\TortoiseSVN\\SSH"));
+    if (tsvn_ssh.IsEmpty() && ctx->config)
+    {
+        // check whether the ssh client is already set in the Subversion config
+        svn_config_t * cfg = (svn_config_t *)apr_hash_get (ctx->config, SVN_CONFIG_CATEGORY_CONFIG,
+            APR_HASH_KEY_STRING);
+        if (cfg)
+        {
+            const char * sshValue = NULL;
+            svn_config_get(cfg, &sshValue, SVN_CONFIG_SECTION_TUNNELS, "ssh", "");
+            if ((sshValue == NULL)||(sshValue[0] == 0))
+                tsvn_ssh = _T("\"") + CPathUtils::GetAppDirectory() + _T("TortoisePlink.exe") + _T("\"");
+        }
+    }
+    tsvn_ssh.Replace('\\', '/');
+    if (!tsvn_ssh.IsEmpty() && ctx->config)
+    {
+        svn_config_t * cfg = (svn_config_t *)apr_hash_get (ctx->config, SVN_CONFIG_CATEGORY_CONFIG,
+            APR_HASH_KEY_STRING);
+        if (cfg)
+        {
+            svn_config_set(cfg, SVN_CONFIG_SECTION_TUNNELS, "ssh", CUnicodeUtils::GetUTF8(tsvn_ssh));
+            bRet = true;
+        }
+    }
+    return bRet;
 }
