@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2011 - TortoiseSVN
+// Copyright (C) 2003-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -163,17 +163,7 @@ void SVNReadProperties::Construct()
 
     m_pctx->log_msg_func3 = svn_get_log_message;
 
-    // set up the SVN_SSH param
-    CString tsvn_ssh = CRegString(_T("Software\\TortoiseSVN\\SSH"));
-    if (tsvn_ssh.IsEmpty())
-        tsvn_ssh = CPathUtils::GetAppDirectory() + _T("TortoisePlink.exe");
-    tsvn_ssh.Replace('\\', '/');
-    if (!tsvn_ssh.IsEmpty())
-    {
-        svn_config_t * cfg = (svn_config_t *)apr_hash_get (m_pctx->config, SVN_CONFIG_CATEGORY_CONFIG,
-            APR_HASH_KEY_STRING);
-        svn_config_set(cfg, SVN_CONFIG_SECTION_TUNNELS, "ssh", CUnicodeUtils::GetUTF8(tsvn_ssh));
-    }
+    SVNConfig::SetUpSSH(m_pctx);
 
 #endif
 }
